--- a/NonConditional/HypothesisConstruction.tex
+++ b/NonConditional/HypothesisConstruction.tex
@@ -12,7 +12,7 @@
 	In Chapter~\ref{sec:Learning} we went through examples of different strategies. In this section we will show how that can be put to practice for STRIPS-style action schema, and what it means for the action schema itself.
 	Furthermore, this section will also show the dichotomy between using unproven preconditions and unproven effects and how to manipulate the traits of a given strategy by changing these.
 
-	As both preconditions and effects use \Pro, \Dsp and \Up we use that notation of saying $\Dsp_P$, $\Pro_P$ $\dots$ for preconditions and
+	As both preconditions and effects use \Pro, \Dsp and \Up we use the notation of saying $\Dsp_P$, $\Pro_P$ $\dots$ for preconditions and
 	$\Dsp_E$, $\Pro_E$ $\dots$ for effects.
 	
 	Furthermore, the unproven \Up --- preconditions or effects --- follows from \Cref{inv:nca:mutual-ex}.
