--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -6,8 +6,8 @@ Throughout this thesis, we have explored the concepts of learning, including dif
 We have shown that these concepts can be implemented by an algorithmization of the scientific method, from which we inherit the idea of experimenting to obtain data that can then be analysed to distill facts and falsities.
 
 	Separate to the act of obtaining knowledge from observations is the concept of achieving situations that may accommodate learning, referred to as a learning strategy.
-	Strategies are essential to the discussion of learning, 
-	It is also an unavoidable feature of any intelligent agent, since that not having a strategy is a strategy itself. 
+	Strategies are essential to the discussion of learning, as they define what an agent is able to learn.
+	It is also an unavoidable feature of any intelligent agent, since not having a strategy is a strategy in itself. 
 
 
 	Initially when one looks at learning from a purely non-conditional perspective, 
