--- a/Learning/introductionToLearning.tex
+++ b/Learning/introductionToLearning.tex
@@ -12,7 +12,9 @@
 	not through gaining some new understanding of archery but rather by doing it repeatedly until he has sufficiently built up his muscle memory.
 	While from a human perspective this makes sense as a form of learning, 
 	it does not make sense in a logical view of learning, as it is just an optimization of the access time of the knowledge the person has about the subject.
-    Therefore, we will ignore the notion of ``skills'' and distill the definition to that \textbf{Learning is the acquisition of knowledge}. Although this definition may be sufficient, we would not define an agent that merely remembers all observed state transition as a learning agent. Rather, it would be reasonable to require that a learning agent must also be able to infer new knowledge from its observations. It is this component of the learning process we will focus on in this thesis, rather than simply storing and recalling data.
+    Therefore, we will ignore the notion of ``skills'' and distill the definition to that \textbf{Learning is the acquisition of knowledge}.
+    
+    Although this definition may be sufficient, it is represented --- in its most extreme interpretation --- as an agent that simply remembers all observed state transitions and is able to recall them in an identical situation. The intractability of this solution can be relieved by combining observations using probabilistics, thus gaining an approximate understanding of the domain. In contrast, we will focus on learning yielding perfect predictability, such that knowledge of the domain is proven to be correct.
 
 \section{Defining learning}
 	
