--- a/Discussion/SpaceComplexity.tex
+++ b/Discussion/SpaceComplexity.tex
@@ -10,18 +10,19 @@ That the instant that something is shown to the agent in the state-transition th
 However if one were to implement our models directly, as they are written the same knowledge is repeated multiple times, but none of the knowledge would be superfluous.
 We realise that it might still be interesting what the exact space complexity of our non-condition action knowledge is, if implemented naively:
  \begin{align*}
- 	Unproven ~\Up & = O(n) \\
- 	Disproven~\Dsp & = O(n) \\
- 	Proven~\Pro &= O(n) \\
+ 	Unproven ~\Up_P = \Up_E & = O(n) \\
+ 	Disproven~\Dsp_P = \Up_E & = O(n) \\
+ 	Proven~\Pro_P = \Up_E &= O(n) \\
  	All ~ candidate sets~ \cset & = O(n \times n)=O(n^2) \\
  	Maximum ~ cardinality~ of ~ state  ~ n & = |\preds| \times |\objs|^k \\
  	where ~ k ~ is ~ the&  ~ arity ~ of ~ the~ highest~ arity ~ predicate.
  \end{align*} 
+ where $k$ is the maximum arity of predicates, and $n$ is the size of a state.
  \begin{proof} 
- 	As the maximum number of atoms to add to a state is the maximum number of atoms possible in a state $O(n)$,
+ 	As the maximum number of atoms to add to a state is the maximum number of atoms possible in a state of size $n$,
  	it follows that the maximum cardinality of effects or preconditions must therefore be $O(n)$.
-	Since unproven initially contains all possible effects or preconditions (depending on the use-case), 
-	it then follows that unproven must have the cardinality $O(n)$. 
+Since \up initially contains all possible effects or preconditions (depending on the use-case), 
+	it then follows that \Up must have the cardinality $O(n)$. 
 	As proven/disproven cannot be larger than unproven then they must also be $O(n)$.
 	In fact because of $\Cref{inv:nca:mutual-ex}$ and $\Cref{inv:nca:completeness}$, $|\Pro|+|\Up|+|\Dsp| = n$.
 	For candidates it is less obvious, but consider that candidates require that there is one new precondition in
