--- a/Discussion/SpaceComplexity.tex
+++ b/Discussion/SpaceComplexity.tex
@@ -13,8 +13,8 @@ We realise that it might still be interesting what the exact space complexity of
  	Unproven ~\Up_P = \Up_E & = O(n) \\
  	Disproven~\Dsp_P = \Up_E & = O(n) \\
  	Proven~\Pro_P = \Up_E &= O(n) \\
- 	All ~ candidate sets~ \cset & = O(n \times n)=O(n^2) \\
- 	Maximum ~ cardinality~ of ~ state  ~ n & = |\preds| \times |\objs|^k \\
+ 	All ~ candidate sets~ \cset & = O(n \cdot n)=O(n^2) \\
+ 	Maximum ~ cardinality~ of ~ state  ~ n & = |\preds| \cdot |\objs|^k \\
  	where ~ k ~ is ~ the&  ~ arity ~ of ~ the~ highest~ arity ~ predicate.
  \end{align*} 
  where $k$ is the maximum arity of predicates, and $n$ is the size of a state.
