--- a/Conditional/WhatIsConditionalEffects.tex
+++ b/Conditional/WhatIsConditionalEffects.tex
@@ -9,7 +9,7 @@ What separates conditional action schemas from their non-conditional counterpart
     \underbrace{\left[ q(x, y), \dots \right]}_{\textit{effects}} \quad when \quad 
     \underbrace{\left[ g(z, x), \dots  \right]}_{\textit{preconditions}}
 \end{equation*}
-For any interpretation of the variables $\varC\left(\cond\right)$, the \textit{effects} are only applied if the \textit{preconditions} are satisfied. Note that --- in this sense --- a conditional is similar to a non-conditional action with as many parameters as there are objects in the world. In the following sections, we assume that each conditionals only have a single effect, and that this effect is unique from effects of other conditionals in the same action schema. This allows us to discern between different conditionals, and learn the preconditions of each separately.
+For any interpretation of the variables $\varC\left(\cond\right)$, the \textit{effects} are only applied if the \textit{preconditions} are satisfied. Note that --- in this sense --- a conditional is similar to a non-conditional action with as many parameters as there are objects in the world. 
 
 See \Cref{ex:ca:sokoban-moveleft-action} for an example of an action with conditional effects. 
 
